--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
-<html>
+<html lang="en">
 <head>
     <title>Broadcast Plugin Changelog</title>
     <style type="text/css">
@@ -28,12 +28,12 @@
         }
 
         TT {
-            font-family : courier new;
+            font-family: courier new, monospace;
             font-weight : bold;
             color : #060;
         }
         PRE {
-            font-family : courier new;
+            font-family: courier new, monospace;
             font-size : 100%;
         }
     </style>
@@ -43,6 +43,11 @@
 <h1>
 Broadcast Plugin Changelog
 </h1>
+
+<p><b>1.9.2</b> -- March 29, 2019</p>
+<ul>
+    <li>[<a href='https://github.com/igniterealtime/openfire-broadcast-plugin/issues/2'>Issue #2</a>] - Broadcast plugin not working with Openfire 4.3</li>
+</ul>
 
 <p><b>1.9.1</b> -- March 18, 2019</p>
 <ul>
