--- a/changelog.html
+++ b/changelog.html
@@ -44,6 +44,11 @@
 Broadcast Plugin Changelog
 </h1>
 
+<p><b>1.9.3</b> -- September 12, 2024</p>
+<ul>
+    <li>No functional changes, just a plugin rebuild.</li>
+</ul>
+
 <p><b>1.9.2</b> -- March 29, 2019</p>
 <ul>
     <li>[<a href='https://github.com/igniterealtime/openfire-broadcast-plugin/issues/2'>Issue #2</a>] - Broadcast plugin not working with Openfire 4.3</li>
