march toward 1.9.4-SNAPSHOT

--- a/changelog.html
+++ b/changelog.html
@@ -44,6 +44,10 @@
 Broadcast Plugin Changelog
 </h1>
 
+<p><b>1.9.4</b> -- (To be determined)</p>
+<ul>
+</ul>
+
 <p><b>1.9.3</b> -- September 12, 2024</p>
 <ul>
     <li>No functional changes, just a plugin rebuild.</li>
